# agentic-conversation-agent

./: README.md  pyproject.toml
commons/: __init__.py
commons/human/: __init__.py  mock.py  protocols.py
commons/llm/: __init__.py  openai_adapter.py  quiz.py  validator.py
commons/middleware/: __init__.py  circuit_breaker_mw.py  config_mw.py  error_handling_mw.py  instrumented_graph.py  logging_mw.py  metrics_mw.py  retry_mw.py  validation_mw.py
commons/node_validation/: __init__.py  handle_error.py  validator_decorator.py
commons/tool_client/: __init__.py  langchain_bridge.py
conversation_engine/examples/: chat_with_openai.py  run_with_openai.py
conversation_engine/fixtures/: __init__.py  config_fixtures.py  graph_fixtures.py  project_fixtures.py
conversation_engine/graph/: __init__.py  architectural_context.py  builder.py  context.py  nodes.py  state.py
conversation_engine/infrastructure/: __init__.py  instrumented_graph.py
conversation_engine/models/: __init__.py  assessment.py  base.py  domain_config.py  graph_db_access.py  nodes.py  project_spec.py  (+3 more)
design/: api-build-plan.md  components.md  context-builder.md  goals.md  information.md  intent.md  phase10.prompts.md  phase11-claim-based-insights.md  pressure_test_insight_prompts.py  test-plan.md  tutorial-plan.md
docs/: getting-started.md  langgraph-developer-rubric.md  phase11-todo.md
journal-agent/: config_builder.py  llm_client.py  main.py  model.py  storage.py
journal_agent/: main.py  main_python.py  main_reembedd.py  main_reflect.py  main_replay.py  telemetry.py
sql/: schema.sql
(+224 files in other folders)
