[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversation-agent"
version = "0.1.0"
description = "Conversational planning engine using LangGraph"
requires-python = ">=3.11"
authors = [
    {name = "Chris Lomeli"}
]
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=1.4.0",
    "pydantic-settings>=2.13.1",
    "openai>=1.0",
    "anthropic>=0.28",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["commons", "conversation_engine"]

[tool.pytest.ini_options]
testpaths = ["conversation_engine/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
